<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.amicablesoft.ghusersbrowser.android.ui.repos.UserReposActivity"
    tools:showIn="@layout/activity_user_repos">
    <LinearLayout
        android:id="@+id/user_repos__repos_loading_view"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_gravity="center_horizontal">
        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/Widget.AppCompat.ProgressBar"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/common__label__loading"
            android:textAppearance="@style/GHUsersBrowser.TextAppearance.Medium"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/user_repos__list__repos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</FrameLayout>
